# sense2vec

./: .flake8  .gitignore  .travis.yml  LICENSE  MANIFEST.in  README.md  README.rst  azure-pipelines.yml  buildbot.json  prodigy_recipes.py  push-tag.sh  pyproject.toml  requirements-all.txt  requirements-dev.txt  requirements.txt  serve_vectors.py  setup.cfg  setup.py
.github/workflows/: tests.yml
fancyvec/: about.py  cblas_shim.h  count_words.pyx  vectors.pyx
fancyvec/tests/: .test_vectors.py.swp  test_vectors.py
include/: cblas_shim.h
include/numpy/: _numpyconfig.h
prodigy_recipes/: phrases.py
scripts/: 01_parse.py  02_preprocess.py  03_glove_build_counts.py  04_fasttext_train_vectors.py  04_glove_train_vectors.py  05_export.py  06_precompute_cache.py  06_precompute_neighbors.py  preprocess.py  requirements.txt  streamlit_sense2vec.py  train.py
sense2vec/: __init__.py  _strings.pxd  _strings.pyx  about.py  cblas_shim.h  cfile.pxd  component.py  count_words.pyx  download.py  merge_text.py  prodigy_recipes.py  sense2vec.py  util.py  vectors.pxd  vectors.pyx
sense2vec/tests/: conftest.py  test_component.py  test_issue155.py  test_model.py  test_sense2vec.py  test_util.py  test_vectors.py
sense2vec/tests/data/: cfg  freqs.json  key2row  strings.json  vectors
tests/: test_component.py  test_model.py  test_sense2vec.py  test_util.py
tests/data/: cache
