[metadata]
version = 1.0.0a2
description = Use NLP to go beyond vanilla word2vec
url = https://github.com/explosion/sense2vec
author = Explosion
author_email = contact@explosion.ai
license = MIT
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Operating System :: POSIX :: Linux
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft :: Windows
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Scientific/Engineering

[options]
zip_safe = true
include_package_data = true
python_requires = >=3.6
install_requires =
    spacy>=2.2.2,<3.0.0
    numpy>=1.15.0
    srsly>=0.2.0
    importlib_metadata>=0.20; python_version < "3.8"

[options.entry_points]
spacy_factories =
    sense2vec = sense2vec:Sense2VecComponent.from_nlp
prodigy_recipes =
    sense2vec.teach = sense2vec:prodigy_recipes.teach
    sens2vec.to_patterns = sense2vec:prodigy_recipes.to_patterns
    sens2vec.evaluate = sense2vec:prodigy_recipes.evaluate

[bdist_wheel]
universal = true

[sdist]
formats = gztar

[flake8]
ignore = E203, E266, E501, E731, W503
max-line-length = 80
select = B,C,E,F,W,T4,B9
exclude =
    .env,
    .git,
    __pycache__,

[mypy]
ignore_missing_imports = True
